--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "vite": "^5.4.10",
     "@vitejs/plugin-react": "^4.3.1"
+    "tailwindcss": "^3.4.14",
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.20"
   }
 }
