--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "lucide-react": "^0.453.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "vite": "^5.4.10",
-    "@vitejs/plugin-react": "^4.3.1"
     "tailwindcss": "^3.4.14",
     "postcss": "^8.4.47",
     "autoprefixer": "^10.4.20"
